--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -1,36 +1,33 @@
-* {
-    margin: 0px;
-    padding: 0px;
+body{
+    color: #3293F3;
+    background-color: #3293F3;
 }
 a{
     text-decoration: unset;
     color: unset;
+    color: black;
 }
-html, body {
-    height: 100%;
-    padding: 0px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+h1 > a{
+    color: aliceblue;
+    font-family: "배달의민족 주아";
 }
-h1{
-    display: inline-block;
+.loginStatus > a{
+    color: aliceblue;
+    font-family: "배달의민족 주아";
 }
-
 header{
     align-items: center;
     line-height: inherit;
     display: table;
     width: 100%;
-    height: 11%;
+    height: 0.5rem;
+    background-color: #212121;
 }
 .rightClass{
-    width: 28%;
-    height: 6rem;
     display: table-cell;
     vertical-align: middle;
 }
 .pageTitle{
-    width: 40%;
-    height: auto;
     text-align: center;
     vertical-align: middle;
     font-size: 2rem;
@@ -39,16 +36,10 @@ header{
     display: table-cell;
 }
 .loginStatus{
-    width: 28%;
     text-align: center;
     color: black;
     display: table-cell;
     vertical-align: middle;
-}
-.container{
-    text-align: center;
-    width: 100%;
-    height: 80%;
 }
 .item{
     margin: 1rem 1rem;
