--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,3 @@
-.anc_tagList{
-    width: 65%;
-    margin: auto auto;
-    text-align: right;
-    color: #00B7FF;
-}
 .tagUrl{
     line-height: 3rem;
     display: block;
@@ -13,21 +7,13 @@
     width: 65%;
 }
 .rankRoom{
-    border: 2px solid black;
-    text-align: center;
-    line-height: 100px;
+    border: 2px solid lightgray;
     margin: 15px auto;
-    height: 70%;
-    width: 65%
+    height: 700px;
+    width: 100%;
 }
-.input_tagUrl{
-  border: 1px solid grey;
-  height: 1.8rem;
-  width: 60%;
-  margin: 0.5rem 0.5rem;
-  display: inline-block;
-  float: left;
-    vertical-align: middle;
+.rankRoom > div > canvas{
+    background-color: white;
 }
 .btn_url{
   border-radius: 5px;
@@ -37,4 +23,13 @@
   display: inline-block;
   float: left;
   vertical-align: middle;
+}
+.from-group > .btn{
+    background-color: #4d4d4d;
+    font-family: "배달의민족 주아";
+    font-size: 1.4rem;
+}
+
+.from-group > .btn:hover{
+    background-color: #3293F3;
 }
