--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,20 @@
-body {
-  padding: 50px;
+* {
+  margin: 0px;
+  padding: 0px;
+  font: "배달의민족 주아";
+}
+html, body {
+  height: 100%;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+
 }
 
-a {
-  color: #00B7FF;
+h1{
+  display: inline-block;
+}
+.selector-for-some-widget {
+  -webkit-box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  box-sizing: content-box;
 }
