--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/stylesheets/basic.css" />
-<header class="container-fluid">
+<header class="header container-fluid">
     <div class="row justify-content-around">
         <div class="rightClass">
 
