--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -19,9 +19,11 @@ header{
     align-items: center;
     line-height: inherit;
     display: table;
-    width: 100%;
-    height: 0.5rem;
     background-color: #212121;
+}
+.header{
+    height: 5%;
+    width: 100%;
 }
 .rightClass{
     display: table-cell;
