--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
     <%- include('header')%>
     <div class="container">
-      <div class="row">
+      <div class="anc_tagListBox row">
         <div class="col-md-1 offset-11">
           <a href="/tagList">더 보기..</a>
         </div>
