--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,10 +1,5 @@
-.tagUrl{
-    line-height: 3rem;
-    display: block;
-    flex-direction: column;
-    align-items: center;
-    margin: auto auto;
-    width: 65%;
+.anc_tagListBox > .col-md-1 > a{
+    font-family: "배달의민족 주아";
 }
 .rankRoom{
     border: 2px solid lightgray;
