--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,9 +1,14 @@
+.anc_tagListBox > .col-md-1{
+    margin-top: 1rem;
+    text-align: right;
+}
 .anc_tagListBox > .col-md-1 > a{
     font-family: "배달의민족 주아";
+    font-size: 1.5rem;
 }
 .rankRoom{
     border: 2px solid lightgray;
-    margin: 15px auto;
+    margin-bottom: 1rem;
     height: 700px;
     width: 100%;
 }
