[Change & Add] Change tagList page css and Add bootstrap

--- a/views/tagList.ejs
+++ b/views/tagList.ejs
@@ -16,37 +16,41 @@
 
     <%- include('header')%>
     <div class="container">
-        <div class="realtimePopulateTagBox">
-            <p class="realtimePopulateTag">
-                <div class="tagTitle">
-                    <h2>실시간 인기 태그</h2>
+        <div class="row TagContentBox justify-content-center">
+            <div class="col-10 container-fluid tagListBox">
+                <div class="tagTitle row justify-content-center">
+                    <h2 class="col-8">실시간 인기 태그</h2>
                 </div>
-                <div class="tagListBox">
-                    <ol class="tagList">
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                        <li class="tagRank">안녕하세요</li>
-                    </ol>
+                <div class="row justify-content-center">
+                    <div class="tagList col-10">
+                        <ol class="tagList">
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                        </ol>
+                    </div>
                 </div>
-            </p>
+            </div>
         </div>
-        <div class="realtimePopulateTagBox">
-            <p class="realtimePopulateTag">
-            <div class="tagTitle">
-                <h2>실시간 인기 태그</h2>
+        <div class="row TagContentBox justify-content-center">
+            <div class="col-10 container-fluid tagListBox">
+                <div class="tagTitle row justify-content-center">
+                    <h2 class="col-8">실시간 인기 태그</h2>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="tagList col-10">
+                        <ol class="tagList">
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                            <li class="tagRank">안녕하세요</li>
+                        </ol>
+                    </div>
+                </div>
             </div>
-            <div class="tagListBox">
-                <ol class="tagList">
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                    <li class="tagRank">안녕하세요</li>
-                </ol>
-            </div>
-            </p>
         </div>
     </div>
 
