--- a/public/stylesheets/tagList.css
+++ b/public/stylesheets/tagList.css
@@ -1,13 +1,27 @@
-.realtimePopulateTagBox{
-    vertical-align: center;
-    margin: 2.5rem auto;
-    width: 40%;
+.container{
+    margin-top: 1.5rem;
+}
+.TagContentBox{
+    margin: 1rem;
+}
+.tagListBox{
+    background-color: aliceblue;
 }
 .tagTitle{
-    margin: 1.5rem;
+    padding: 1rem;
+    height: 4rem;
     font-size: 1.5rem;
+    text-align: center;
+    background-color: #4d4d4d;
+}
+.tagTitle{
+    color: white;
 }
 .tagRank{
     margin: 1rem;
     font-size: 1.3rem;
+    color: white;
+}
+.tagList > ol > li{
+    color: black;
 }
