--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,22 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: 'Fjalla One', sans-serif;
+  background: #EBE9D1;
+ /* background: linear-gradient(to bottom, #405166 0%,#00B7FF 100%);*/
+  /*background: radial-gradient(ellipse at bottom, #1B2735 0%, #090A0F 100%)*/
 }
 
-a {
-  color: #00B7FF;
+/*#656f6f*/
+
+/*
+$light: #EBE9D1 -> 상아색
+ */
+/*
+
+body{
+  font-family: 'Fjalla One', sans-serif;
+  background: $background;
 }
+$background: linear-gradient(to bottom, #405166 0%,#656f6f 100%);
+ */
