--- a/public/stylesheets/basic.css
+++ b/public/stylesheets/basic.css
@@ -7,33 +7,32 @@
 a{
     text-decoration: unset;
     color: unset;
-    color: aliceblue;
 }
-a:hover{
-    text-decoration:none;
-    color: aliceblue;
+html, body {
+    height: 100%;
+    padding: 0px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
+h1{
+    display: inline-block;
+}
+
 header{
     align-items: center;
-    background-color: #212121;
-    height: 5%;
+    line-height: inherit;
+    display: table;
     width: 100%;
+    height: 11%;
 }
-header > .row{
-    height: 100%;
-    width: 100%;
+.rightClass{
+    width: 28%;
+    height: 6rem;
+    display: table-cell;
+    vertical-align: middle;
 }
-.TitleHead{
-    text-align: left;
-}
-.TitleHead > h2{
-    margin-top: 8px;
-}
-.TitleHead > h2 > a{
-    color: aliceblue;
-    font-family: "배달의민족 주아";
-}
-.middleHead{
+.pageTitle{
+    width: 40%;
+    height: auto;
     text-align: center;
     vertical-align: middle;
     font-size: 2rem;
@@ -64,12 +63,10 @@ header > .row{
     display: table-cell;
     vertical-align: middle;
 }
-.loginHead > a{
-    font-size: 1.5rem;
-    display: inline-block;
-    color: aliceblue;
-    font-family: "배달의민족 주아";
-    margin-top: 7px;
+.container{
+    text-align: center;
+    width: 100%;
+    height: 80%;
 }
 .item{
     margin: 1rem 1rem;
