--- a/public/stylesheets/chatroom.css
+++ b/public/stylesheets/chatroom.css
@@ -1,55 +1,50 @@
-.main{
-    min-height: 94%;
-    height: 94%;
-}
-.chatroomContainer{
+
+
+.container{
+    height: 80%;
     width: auto;
-    height: 100%;
+    border: 2px black solid;
+    padding: 1rem;
+    margin: 1rem;
 }
+
 .postContainer{
+    width: 70%;
     height: 100%;
-    overflow: auto;
-}
-.postView{
-    overflow: auto;
-}
-.postContent{
-    background-color: white;
-    margin: 1.5rem 1.5rem;
+    border: 1px black solid;
+    float:left;
+    margin-right: 0.5rem;
 }
 .chatContainer{
+    width: 28%;
+    height: 100%;
     border: 1px black solid;
-    overflow: hidden;
+    float:left;
+    position: relative;
 }
 .chatView{
-    overflow: auto;
-    height: 87%;
     border: 1px black solid;
-    background-color: white;
+    height: 93%;
+    margin: 1px;
+    padding: 0.5rem;
 }
 .chatForm{
     width: 100%;
+    position: absolute;
+    clear: left;
+    left: 1px;
+    bottom: 0px;
 }
 #chatTextBox{
-    display: block;
-    width: 100%;
-    margin-top: 1rem;
+    width: 70%;
 }
 #chatSubmit{
-    display: block;
-    background-color: #4d4d4d;
-    font-family: "배달의민족 주아";
-    font-size: 1.4rem;
-    float: right;
-
+    width: 26%;
 }
-#chatForm > .btn:hover{
-    background-color: #3293F3;
-}
-
-.chatContent{
+.chatMessage_Container{
+    background-color: darkgrey;
     line-height: 20px;
-    margin: 1rem 1rem;
+    margin: 0.2rem;
 }
 
 .chatMessage_divImage{
@@ -68,10 +63,8 @@
     font-weight: bold;
     display: inline-block;
     vertical-align: middle;
-    color: black;
 }
 .chatMessage_message{
     display: inline-block;
     vertical-align: middle;
-    color: black;
 }
