--- a/public/stylesheets/tagList.css
+++ b/public/stylesheets/tagList.css
@@ -1,15 +1,10 @@
-.container{
-    margin-top: 1.5rem;
-}
-.TagContentBox{
-    margin: 1rem;
-}
-.tagListBox{
-    background-color: aliceblue;
+.realtimePopulateTagBox{
+    vertical-align: center;
+    margin: 2.5rem auto;
+    width: 40%;
 }
 .tagTitle{
-    padding: 1rem;
-    height: 4rem;
+    margin: 1.5rem;
     font-size: 1.5rem;
     color: #2b9f5e;
     /*transform: translateX(-50%) rotate(-10deg);*/
@@ -23,3 +18,4 @@
     margin: 1rem;
     font-size: 1.3rem;
 }
+
