--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,29 +1,27 @@
 <link rel="stylesheet" href="/stylesheets/basic.css" />
-<header class="container-fluid">
-    <div class="row">
-        <div class="TitleHead col-2 offset-1">
-            <h2>
-                <a href="/">
-                    <%= title %>
-                </a>
-            </h2>
-        </div>
-        <div class="middleHead col-6">
-        </div>
-        <div class="loginHead col-3">
-            <%if (typeof uid != 'undefined') {%>
-            <a href="/users/mypage/<%=uid%>">
-                <%= uid %>
-            </a>
-            <button id="btnLogout">로그아웃</button>
-            <%} else { %>
-            <a href="/users/login">
-                로그인
-            </a>
-            <%}%>
-        </div>
-    </div>
+<header>
+    <div class="rightClass">
 
+    </div>
+    <div class="pageTitle">
+        <h1>
+            <a href="/">
+                <%= title %>
+            </a>
+        </h1>
+    </div>
+    <div class="loginStatus">
+        <%if (typeof uid != 'undefined') {%>
+        <a href="/users/mypage/<%=uid%>">
+            <%= uid %>
+        </a>
+        <button id="btnLogout">로그아웃</button>
+        <%} else { %>
+        <a href="/users/login">
+            로그인
+        </a>
+        <%}%>
+    </div>
     <script type="text/javascript">
         $(document).ready(function() {
             $('#btnLogout').click(
