--- a/views/tagList.ejs
+++ b/views/tagList.ejs
@@ -2,55 +2,44 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/basic.css" />
     <link rel="stylesheet" href="/stylesheets/tagList.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
 </head>
 <body>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-
     <%- include('header')%>
     <div class="container">
-        <div class="row TagContentBox justify-content-center">
-            <div class="col-10 container-fluid tagListBox">
-                <div class="tagTitle row justify-content-center">
-                    <h2 class="col-8">실시간 인기 태그</h2>
+        <div class="realtimePopulateTagBox">
+            <p class="realtimePopulateTag">
+                <div class="tagTitle">
+                    <h2>실시간 인기 태그</h2>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="tagList col-10">
-                        <ol class="tagList">
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                        </ol>
-                    </div>
+                <div class="tagListBox">
+                    <ol class="tagList">
+                        <li class="tagRank">안녕하세요</li>
+                        <li class="tagRank">안녕하세요</li>
+                        <li class="tagRank">안녕하세요</li>
+                        <li class="tagRank">안녕하세요</li>
+                        <li class="tagRank">안녕하세요</li>
+                    </ol>
                 </div>
-            </div>
+            </p>
         </div>
-        <div class="row TagContentBox justify-content-center">
-            <div class="col-10 container-fluid tagListBox">
-                <div class="tagTitle row justify-content-center">
-                    <h2 class="col-8">실시간 인기 태그</h2>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="tagList col-10">
-                        <ol class="tagList">
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                            <li class="tagRank">안녕하세요</li>
-                        </ol>
-                    </div>
-                </div>
+        <div class="realtimePopulateTagBox">
+            <p class="realtimePopulateTag">
+            <div class="tagTitle">
+                <h2>실시간 인기 태그</h2>
             </div>
+            <div class="tagListBox">
+                <ol class="tagList">
+                    <li class="tagRank">안녕하세요</li>
+                    <li class="tagRank">안녕하세요</li>
+                    <li class="tagRank">안녕하세요</li>
+                    <li class="tagRank">안녕하세요</li>
+                    <li class="tagRank">안녕하세요</li>
+                </ol>
+            </div>
+            </p>
         </div>
     </div>
 
