--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,9 @@
         <a href="/users/mypage/<%=uid%>">
             <%= uid %>
         </a>
-        <button id="btnLogout">로그아웃</button>
+
+        <button id="btnLogout" class="button">Logout</button>
+
         <%} else { %>
         <a href="/users/login">
             로그인
