--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -24,14 +24,15 @@
         </div>
     </div>
     <div class="line"></div>
+
     <div class="anc_Posting">
-        <button onclick="writePost()">
+        <button onclick="writePost()" class="btn_posting">
             포스팅하기
         </button>
     </div>
     <script>
         function writePost(){
-            window.open('/users/writeCard', null, "width = 500, height = 300, location=no, resizable=no")
+            window.open('/users/writeCard', null, "width = 1000, height = 400, location=no, resizable=no")
         }
     </script>
     <div class="userPostBox">
