--- a/public/stylesheets/myPage.css
+++ b/public/stylesheets/myPage.css
@@ -20,6 +20,9 @@
 }
 .anc_userInfoEdit{
     text-align: right;
+    text-decoration: underline;
+    color: #533d4a;
+    font-size: 15px;
 }
 
 .userPostBox{
@@ -49,4 +52,38 @@
     vertical-align:middle;
 }
 .postItem_text{
+}
+
+
+/*.button{*/
+    /*width: 15%;*/
+    /*text-align: center;*/
+    /*vertical-align: middle;*/
+    /*color: #533d4a;*/
+    /*!*background-color: #f1c83c;*!*/
+    /*background-color: #EBE9D1;*/
+    /*border: 2px solid #533d4a;*/
+    /*border-radius: 5px;*/
+    /*font-size: 13px;*/
+/*}*/
+
+
+.btn_posting{
+    border-radius: 5px;
+    width: 15%;
+    text-align: center;
+    height: 1.9rem;
+    display: inline-block;
+    vertical-align: middle;
+    background-color: #f1c83c;
+    color: white;
+    font-size: 13px;
+    border: 2px solid #533d4a;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.btn_posting:hover {
+    background-color: white;
+    color: #533d4a;
 }
