--- a/views/writeCard.ejs
+++ b/views/writeCard.ejs
@@ -5,8 +5,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="/stylesheets/writeCard.css" />
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
+    <script src="/javascripts/writeCard.js"></script>
 </head>
 <body>
+<!--
 <div class="container">
     <form action="/posts/card" method="post" id="writePost" class="writePost" enctype="multipart/form-data">
         <input type="text" name="user_ObjectId" style="display: none" />
@@ -28,6 +30,46 @@
         </div>
     </form>
 </div>
+-->
+<div class="widget-post" aria-labelledby="post-header-title">
+    <div class="widget-post__header">
+        <h2 class="widget-post__title" id="post-header-title">
+            <i class="fa fa-pencil" aria-hidden="true"></i>
+            write post
+        </h2>
+        <div class="titleBox inputBox">
+            제목 : <input type="text" name="title"/>
+        </div>
+    </div>
+    <form  action="/posts/card" method="post" id="widget-form" class="widget-post__form" enctype="multipart/form-data"
+           name="form" aria-label="post widget">
+        <div class="widget-post__content">
+            <label for="post-content" class="sr-only">share your moments</label>
+            <textarea name="content" id="post-content" class="widget-post__textarea scroller" placeholder="share your moments"></textarea>
+        </div>
 
+        <div class="widget-post__actions post--actions">
+            <div class="post-actions__attachments">
+                <button type="button" class="btn post-actions__upload attachments--btn">
+                    <label for="upload-image" class="post-actions__label">
+                        <i class="fa fa-upload" aria-hidden="true"></i>
+                        upload image
+                    </label>
+                </button>
+                <input type="file" id="upload-image" accept="image/*" multiple><br/>
+                <div class="tagBox inputBox">
+                    태그 : <input type="text" name="tag" placeholder="예) #태그내용 #태그내용"/>
+                </div>
+            </div>
+
+            <div class="post-actions__widget">
+                <input type="submit" value="전송하기" class="btn post-actions__publish">
+            </div>
+         <!--   <div class="post-actions__widget">
+                <button class="btn post-actions__publish">publish</button>
+            </div>-->
+        </div>
+    </form>
+</div>
 </body>
 </html>
